--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -6,27 +6,28 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-clientid"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" id="client_id_select" name="client_id" placeholder="" langtag="word-belongclient"></select>
-                            <!--<input value="{{.client_id}}" class="form-control" type="text" name="client_id" placeholder="" langtag="word-clientid">-->
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" id="client_id_select" name="client_id">
+                                <option langtag="word-belongclient"></option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-remark"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" type="text" name="remark" placeholder="" langtag="word-remark">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-host"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" type="text" name="host" placeholder="" langtag="info-suchashost">
                         </div>
                     </div>
                     <div class="form-group" id="scheme">
                         <label class="control-label font-bold" langtag="word-scheme"></label>
-                        <div class="col-sm-10">
-                            <select id="scheme_select" class="form-control" name="scheme">
+                        <div class="col-sm-12">
+                            <select id="scheme_select" class="form-control selectpicker" name="scheme">
                                 <option value="all" langtag="word-all"></option>
                                 <option value="http" langtag="word-http"></option>
                                 <option value="https" langtag="word-https"></option>
@@ -36,7 +37,7 @@
                     {{if eq true .allow_flow_limit}}
                     <div class="form-group" id="flow_limit">
                         <label class="control-label font-bold" langtag="word-flowlimit"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" langtag="info-unrestricted" name="flow_limit" placeholder="" type="text">
                             <span class="help-block m-b-none" langtag="word-unit"></span>: M
                         </div>
@@ -45,7 +46,7 @@
                     {{if eq true .allow_time_limit}}
                     <div class="form-group" id="time_limit">
                         <label class="control-label font-bold" langtag="word-timelimit"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" id="time_limit_input" langtag="info-unrestricted" name="time_limit" placeholder="" type="datetime-local">
                             <span class="help-block m-b-none" langtag="info-timelimit"></span>
                         </div>
@@ -53,8 +54,8 @@
                     {{end}}
                     <div class="form-group" id="auto_https">
                         <label class="control-label font-bold" langtag="word-autohttps"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="auto_https">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" name="auto_https">
                                 <option langtag="word-no" value="0"></option>
                                 <option langtag="word-yes" value="1"></option>
                             </select>
@@ -62,8 +63,8 @@
                     </div>
                     <div class="form-group" id="auto_cors">
                         <label class="control-label font-bold" langtag="word-autocors"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="auto_cors">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" name="auto_cors">
                                 <option langtag="word-no" value="0"></option>
                                 <option langtag="word-yes" value="1"></option>
                             </select>
@@ -71,8 +72,8 @@
                     </div>
                     <div class="form-group" id="https_just_proxy">
                         <label class="control-label font-bold" langtag="word-httpsjustproxy"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" id="https_just_proxy_select" name="https_just_proxy">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" id="https_just_proxy_select" name="https_just_proxy">
                                 <option langtag="word-no" value="0"></option>
                                 <option langtag="word-yes" value="1"></option>
                             </select>
@@ -80,8 +81,8 @@
                     </div>
                     <div class="form-group" id="proxy_protocol">
                         <label class="control-label font-bold" langtag="word-proxyprotocol"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="proxy_protocol">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" name="proxy_protocol">
                                 <option langtag="word-disable" value="0"></option>
                                 <option langtag="word-proxyprotocolv1" value="1"></option>
                                 <option langtag="word-proxyprotocolv2" value="2"></option>
@@ -90,27 +91,27 @@
                     </div>
                     <div class="form-group" id="cert_file">
                         <label class="control-label font-bold" langtag="word-httpscert"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <textarea class="form-control" id="pemText" langtag="info-pemtext" name="cert_file_path" placeholder="" rows="6" type="text"></textarea>
                         </div>
                     </div>
                     <div class="form-group" id="key_file">
                         <label class="control-label font-bold" langtag="word-httpskey"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <textarea class="form-control" id="pemKey" langtag="info-pemkey" name="key_file_path" placeholder="" rows="6" type="text"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-urlroute"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" langtag="info-unrestricted" name="location" placeholder="" type="text">
                         </div>
                     </div>
                     {{if eq true .allow_local_proxy}}
                     <div class="form-group" id="local_proxy">
                         <label class="control-label font-bold" langtag="word-proxytolocal"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="local_proxy">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" name="local_proxy">
                                 <option langtag="word-no" value="0"></option>
                                 <option langtag="word-yes" value="1"></option>
                             </select>
@@ -119,8 +120,8 @@
                     {{end}}
                     <div class="form-group" id="target_is_https">
                         <label class="control-label font-bold" langtag="word-targetishttps"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="target_is_https">
+                        <div class="col-sm-12">
+                            <select class="form-control selectpicker" name="target_is_https">
                                 <option value="0">HTTP</option>
                                 <option value="1">HTTPS</option>
                             </select>
@@ -128,7 +129,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-target"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <textarea class="form-control" langtag="info-suchasiplist" name="target" placeholder="" rows="4" type="text"></textarea>
                             <span class="help-block m-b-none" langtag="info-targethost"></span>
 
@@ -136,7 +137,7 @@
                     </div>
                     <div class="form-group" id="header">
                         <label class="control-label font-bold" langtag="word-requestheader"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <textarea class="form-control" name="header" placeholder="Cache-Control: no-cache" rows="4" type="text"></textarea>
                             <span class="help-block m-b-none" langtag="info-header"></span>
                         </div>
@@ -144,7 +145,7 @@
                     </div>
                     <div class="form-group" id="hostchange">
                         <label class="control-label font-bold" langtag="word-requesthost"></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-12">
                             <input class="form-control" langtag="word-requesthost" name="hostchange" placeholder="" type="text" value="">
                         </div>
                     </div>
@@ -233,50 +234,35 @@
                 $("#key_file").css("display", "block")
             }
         })
+    });
 
-        var clientId = "{{.client_id}}";
-        $("#client_id_select").select2({
-            minimumInputLength: 0,
-            ajax: {
-                type: 'POST',
-                url: '{{.web_base_url}}/client/list',
-                dataType: 'json',
-                delay: 300,
-                data: function (params) {
-                    return {
-                        search: params.term || '',
-                        order: 'asc',
-                        offset: 0,
-                        limit: 0
-                    };
-                },
-                processResults: function (data) {
-                    return {
-                        results: data.rows.map(function (client) {
-                            return {
-                                id: client.Id,
-                                text: client.Id + ' - ' + client.Remark
-                            };
-                        })
-                    };
+    function getClientList() {
+        const clientId = "{{.client_id}}"; // 获取 client_id
+        $.ajax({
+            type: "POST",
+            url: "{{.web_base_url}}/client/list", // 服务器数据的加载地址
+            data: {order: "asc", offset: 0, limit: 999},
+            dataType: "json",
+            success: function (data) {
+                if (data && data.rows.length > 0) {
+                    for (var i = 0; i < data.rows.length; i++) {
+                        var option = "<option value=\"" + data.rows[i].Id + "\"";
+                        option += ">" + data.rows[i].Id + '-' + data.rows[i].Remark + "</option>"; // 动态添加数据
+                        $("select[name='client_id']").append(option);
+                    }
+
+                    $("select[name='client_id']").selectpicker('refresh');
+                    
+                    // 设置选中项
+                    if (clientId) {
+                        $("select[name='client_id']").selectpicker('val', clientId);
+                    }
                 }
             }
         });
+    }
 
-        if (clientId) {
-            $.ajax({
-                type: 'POST',
-                url: '{{.web_base_url}}/client/list',
-                data: { clientId: clientId, offset: 0, limit: 0 },
-                dataType: 'json',
-                success: function (data) {
-                    if (data.rows && data.rows.length > 0) {
-                        var client = data.rows[0];
-                        var option = new Option(client.Id + ' - ' + client.Remark, client.Id, true, true);
-                        $("#client_id_select").append(option).trigger('change');
-                    }
-                }
-            });
-        }
-    });
+    function internationalized() {
+        getClientList();
+    }
 </script>
