域名转发中可以搜索客户端ID

--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -8,7 +8,7 @@
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-clientid"></label>
                         <div class="col-sm-12">
-                            <select class="form-control selectpicker" id="client_id_select" name="client_id">
+                            <select class="form-control selectpicker" name="client_id" data-live-search="true">
                                 <option langtag="word-clientid"></option>
                             </select>
                         </div>
