修改客户端下拉框默认文本

--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -9,7 +9,7 @@
                         <label class="control-label font-bold" langtag="word-clientid"></label>
                         <div class="col-sm-12">
                             <select class="form-control selectpicker" name="client_id" data-live-search="true">
-                                <option langtag="word-clientid"></option>
+                                <option langtag="word-belongclient"></option>
                             </select>
                         </div>
                     </div>
