--- a/web/views/index/add.html
+++ b/web/views/index/add.html
@@ -28,7 +28,6 @@
                             </select>
                         </div>
                     </div>
-
                     <div class="form-group" id="client_id">
                         <label class="control-label font-bold" langtag="word-clientid"></label>
                         <div class="col-sm-12">
@@ -37,7 +36,6 @@
                             </select>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-remark"></label>
                         <div class="col-sm-12">
@@ -97,7 +95,6 @@
                         </div>
                     </div>
                     {{end}}
-
                     <div class="form-group" id="target">
                         <label class="control-label font-bold" langtag="word-target"></label>
                         <div class="col-sm-12">
@@ -105,21 +102,18 @@
                             <span class="help-block m-b-none" langtag="info-targettunnel"></span>
                         </div>
                     </div>
-
                     <div class="form-group" id="local_path">
                         <label class="control-label font-bold" langtag="word-localpath"></label>
                         <div class="col-sm-12">
                             <input class="form-control" langtag="info-suchaslocalpath" name="local_path" placeholder="" type="text">
                         </div>
                     </div>
-
                     <div class="form-group" id="strip_pre">
                         <label class="control-label font-bold" langtag="word-stripprefix"></label>
                         <div class="col-sm-12">
                             <input class="form-control" langtag="info-suchasstripprefix" name="strip_pre" placeholder="" type="text">
                         </div>
                     </div>
-
                     <div class="form-group" id="password">
                         <label class="control-label font-bold" langtag="word-identificationkey"></label>
                         <div class="col-sm-12">
@@ -138,7 +132,6 @@
                             </button>
                         </div>
                     </div>
-
                 </form>
             </div>
         </div>
@@ -175,10 +168,11 @@
         $("#use_client").on("change", function () {
             resetForm()
         })
-    })
+    });
 
     function getClientList() {
         const clientId = "{{if .t.Client.Id}}{{.t.Client.Id}}{{else}}{{.client_id}}{{end}}"; // 根据优先级选择
+        $("select[name='client_id']").empty();
         $.ajax({
             type: "POST",
             url: "{{.web_base_url}}/client/list", // 服务器数据的加载地址
