--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -132,7 +132,6 @@
                         <div class="col-sm-12">
                             <textarea class="form-control" langtag="info-suchasiplist" name="target" placeholder="" rows="4" type="text"></textarea>
                             <span class="help-block m-b-none" langtag="info-targethost"></span>
-
                         </div>
                     </div>
                     <div class="form-group" id="header">
@@ -141,7 +140,6 @@
                             <textarea class="form-control" name="header" placeholder="Cache-Control: no-cache" rows="4" type="text"></textarea>
                             <span class="help-block m-b-none" langtag="info-header"></span>
                         </div>
-
                     </div>
                     <div class="form-group" id="hostchange">
                         <label class="control-label font-bold" langtag="word-requesthost"></label>
@@ -182,7 +180,7 @@
             const reader = new FileReader();
             reader.onload = function (e) {
                 pemText.value = e.target.result;
-                console.log("上传pem")
+                console.log("Upload pem")
                 $('#edit_form').data('bootstrapValidator').updateStatus('pemText', 'NOT_VALIDATED');
                 $('#edit_form').data('bootstrapValidator').validateField('pemText');
             }
@@ -238,6 +236,7 @@
 
     function getClientList() {
         const clientId = "{{.client_id}}"; // 获取 client_id
+        $("select[name='client_id']").empty();
         $.ajax({
             type: "POST",
             url: "{{.web_base_url}}/client/list", // 服务器数据的加载地址
