--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -178,7 +178,7 @@
             const reader = new FileReader();
             reader.onload = function (e) {
                 pemText.value = e.target.result;
-                console.log("上传pem")
+                console.log("Upload pem")
                 $('#edit_form').data('bootstrapValidator').updateStatus('pemText', 'NOT_VALIDATED');
                 $('#edit_form').data('bootstrapValidator').validateField('pemText');
             }
@@ -234,7 +234,6 @@
 
     function getClientList() {
         const clientId = "{{.client_id}}"; // 获取 client_id
-
         $("select[name='client_id']").selectpicker({
             liveSearch: true,
             source: {
@@ -243,14 +242,15 @@
                         method: 'POST',
                         url: "{{.web_base_url}}/client/list",
                         dataType: 'json',
-                        data: {order: "asc", offset: 0, limit: 0},
+                        data: { order: "asc", offset: 0, limit: 0 },
                         success: function(response) {
                             // 转换数据格式（必须包含 `value` 和 `text`）
                             const results = $.map(response.rows, function(item) {
+                                let displayText = item.Remark ? item.Id + ' · ' + item.Remark : item.Id.toString();
                                 return {
-                                    value: item.Id,  // 选项的 value
-                                    text: item.Remark, // 选项的显示文本
-                                    selected: item.Id == clientId //默认选中
+                                    value: item.Id,     // 选项的 value
+                                    text: displayText,  // 选项的显示文本
+                                    selected: item.Id == clientId // 默认选中
                                 };
                             });
                             callback(results); // 返回给 selectpicker
@@ -261,19 +261,20 @@
                     });
                 },
                 search: function (callback, page, searchTerm) {
-                    let data = {search: searchTerm, order: "asc", offset: 0, limit: 0};
+                    let data = { search: searchTerm, order: "asc", offset: 0, limit: 0 };
                     $.ajax({
                         method: 'POST',
                         url: "{{.web_base_url}}/client/list",
-                        data,
+                        data: data,
                         dataType: 'json',
                         success: function(response) {
                             // 转换数据格式（必须包含 `value` 和 `text`）
                             const results = $.map(response.rows, function(item) {
+                                let displayText = item.Remark ? item.Id + ' · ' + item.Remark : item.Id.toString();
                                 return {
-                                    value: item.Id,  // 选项的 value
-                                    text: item.Remark, // 选项的显示文本
-                                    selected: item.Id == clientId //默认选中
+                                    value: item.Id,    // 选项的 value
+                                    text: displayText, // 选项的显示文本
+                                    selected: item.Id == clientId // 默认选中
                                 };
                             });
                             callback(results); // 返回给 selectpicker
