调整showMsg弹窗样式

--- a/web/views/login/register.html
+++ b/web/views/login/register.html
@@ -16,6 +16,11 @@
     <script src="{{.web_base_url}}/static/js/jsencrypt.min.js"></script>
     <!-- Latest compiled and minified Locales -->
     <script src="{{.web_base_url}}/static/js/language.js?v={{.version}}" type="text/javascript"></script>
+    <style>
+        #loading {
+            margin-top: -20rem;
+        }
+    </style>
 </head>
 
 <body class="login-page">
